Fix 5438: Keep floating player in view area
## Issue
5438: Keep floating player in view area

## Changes
- Restore correct z-index
    -  The bug came as a side effect of cbac2174. Redo cbac2174 to cover both close button and floating player.

- Remove wobbling when dragging to bottom-right.
    -  The extra gap introduced is fighting against react-draggable. If gaps are needed, handle it entire ourselves or do it somewhere in react-draggable; neither is worth the effort, so the gap was removed.

--- a/ui/scss/component/_content.scss
+++ b/ui/scss/component/_content.scss
@@ -15,6 +15,7 @@
   height: calc(var(--floating-viewer-height) + var(--floating-viewer-info-height));
   overflow: hidden;
   left: calc(var(--spacing-l) + var(--spacing-s));
+  z-index: 9999;
 
   &:hover {
     .content__floating-close {
